[package]
name = "regex-map"
description = "Associative container where the keys are regular expressions."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Palmik/regex-map-rs"
repository = "https://github.com/Palmik/regex-map-rs"


[dependencies]
regex = "1.9.6"
